--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <a  class="store_link" href="https://ru.wikipedia.org/wiki/Дом_связи_(Екатеринбург)">Дом Связи</a>
     </div>
     <div class="portfolio_example">
-      <img src="/img/Gorodok_Chekistov_(August_2022)_-_2.jpg" alt="photo: reebok" class="portfolio_img">
+      <img src="img/Gorodok_Chekistov_(August_2022)_-_2.jpg" alt="photo: reebok" class="portfolio_img">
       <a  class="store_link" href="https://ru.wikipedia.org/wiki/Исеть_(гостиница)">Гостиница "Исеть"</a>
     </div>
 
