--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
       <h2 class="about_title section_title">О конструктивизме</h2>
       <p class="about_text about_info " >Екатеринбургский конструктивизм или свердловский конструктивизм — одно из направлений развития архитектуры Екатеринбурга в 1920-х — 1930-х годах. В этот период в городе был возведён ряд промышленных, общественных и жилых домов в стиле конструктивизма. Ныне Екатеринбург имеет репутацию «столицы конструктивизма».
         Город насчитывает несколько конструктивистских ансамблей и свыше 140 зданий в этом стиле. Часть зданий были снесены в период после распада СССР.</p>
-        <!-- <p class="about_text about_info_1">I'm studying at courses "Web and mobile design 
-        interfaces" in IT-Academy.</p>
-        <p class="about_text about_info_2"> Ready to implement excellent projects
-         with wonderful people.</p> -->
+        <div class="elements">
+      <img src="img/element.png" alt="" class="man"> 
+      <img src="img/element.png" alt="" class="man">
+      <img src="img/element.png" alt="" class="man">
+      <img src="img/element.png" alt="" class="man">
+    </div>
 
     </section>
 <!-- 
