--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
       <div class="denis_img">
         <img src="img/ekat.jpg" alt="photo: Denis Novik" class="photo"/>
-        <img src="img/denis.jpg" alt="photo: denis novik" class="photo_second">
+        <img src="img/ekat.jpg" alt="photo: denis novik" class="photo_second">
       </div>
       
       <!-- <img src="/img/photo_denis.jpg" alt="photo: Denis Novik" class="photo"/> -->
