--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
       <div class="social_network">
       <a href="https://vk.com/aaaesthet1c"> <img src="img/icons8-vk-40 (1).png" alt="button: in link" class="social"></a>
-      <img src="img/icons8-instagram-41.png" alt="button: instagram link" class="social">
+      <img src="img/icons8-почта-41.png" alt="button: instagram link" class="social">
       <a href="@Aesthet1c_0"><img src="img/icons8-телеграм-41.png" alt="button: be link" class="social"></a>
       <img src="img/icons8-discord-41.png" alt="button: globe link" class="social">
     </div>
