--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <p class="footer_welcome">Хотите узнать больше? Пишите!</p>
       <div class="button">
 
-      <img src="img/button message.png" alt="button: send message" class="button_message">
+      <a href="https://vk.com/aaaesthet1c"><img src="img/button message.png" alt="button: send message" class="button_message"></a>
     </div>
       <div class="social_network">
       <a href="https://vk.com/aaaesthet1c"> <img src="img/icons8-vk-40 (1).png" alt="button: in link" class="social"></a>
